Fix padding for like button on mobiles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,6 +152,7 @@ body {
     color: #0233d3;
     border: none;
     background: transparent;
+    padding: 0;
 }
 
 .btn-primary {
